# ML-RA-2025

./: .gitignore  CMakeLists.txt  README.md
01_cuda/: CMakeCache.txt  CMakeLists.txt
01_cuda/mandelbrot_set/src/: CMakeLists.txt  CUDA_mandelbrot.cu  CUDA_mandelbrot.h  cpu_mandelbrot.cpp  cpu_mandelbrot.h  image_utils.cpp  image_utils.h  main.cpp  timer.cpp
01_cuda/matrix_multiplication/src/: CMakeLists.txt  cpu.cpp  cpu.h  cuda.cu  cuda.h  error.cpp  error.h  main.cpp  matrix.cpp  matrix.h
01_cuda/template/src/: CMakeLists.txt  kernel.cu  kernel.h  main.cpp
01_cuda/vector_max/src/: CMakeLists.txt  CUDA_vector_max.cu  CUDA_vector_max.h  cpu_vector_max.cpp  cpu_vector_max.h  main.cpp  timer.h
